# TilemapEditor

./: .gitignore  .gitmodules  CMakeLists.txt  info.txt
libs/: CMakeLists.txt
libs/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h
libs/stb_image/: CMakeLists.txt
src/: main.cpp
src/core/: actions.cpp  actions.h  context.cpp  context.h  pane.h  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h  window.cpp  window.h
src/helpers/: events.cpp  events.h  fs.cpp  fs.h  hotkeys.cpp  hotkeys.h  init.cpp  init.h  logger.h  registry.cpp  texture.cpp  texture.h
src/panes/: tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
